--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 *{
     padding: 0;
     margin: 0;
@@ -6,5 +8,7 @@
 
   body {
     font-family: 'Public Sans', sans-serif;
+    color: $color-dark-blue;
+    background: $color-light-gray;
   }
   
