add button component

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,3 +4,4 @@ $color-white: hsl(0, 0%, 100%);
 $color-grayish-blue: hsl(233, 8%, 62%);
 $color-light-grayish-blue: hsl(220, 16%, 96%);
 $color-light-gray: hsl(0, 0%, 98%);
+$color-bright-cyan: hsl(192, 70%, 51%);
