--- a/src/Components/Button/Button.module.scss
+++ b/src/Components/Button/Button.module.scss
@@ -1,3 +1,15 @@
+@import '../../styles//variables';
 .button {
-    background: red;
+    background: linear-gradient(120deg, $color-lime-green, $color-bright-cyan 70%, $color-white 70%);
+    color: $color-white;
+    padding: .6em 1.8em;
+    border-radius: 2rem;
+    width: max-content;
+    transition: all 0.5s ease-in-out;
+    background-size: 210%;
+
+    &:hover {
+      background-position: 90%;
+      color: $color-dark-blue;
+    }
 }
