--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -30,6 +30,9 @@
     &Description{
         padding: 0 2.5em;
         text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
         h1 {
             font-weight: 400;
@@ -40,6 +43,13 @@
             line-height: 1.5rem;
             font-weight: 400;
             font-size: .9rem;
+        }
+
+        &Cta{
+            display: flex;
+            justify-content: space-around;
+            width: 100%;
+            margin-top: 2rem;
         }
     }
 }
