--- a/src/Components/Button/Button.module.scss
+++ b/src/Components/Button/Button.module.scss
@@ -7,6 +7,7 @@
     width: max-content;
     transition: all 0.5s ease-in-out;
     background-size: 210%;
+    text-transform: capitalize;
 
     &:hover {
       background-position: 90%;
