--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -3,6 +3,8 @@
 .home {
     width: 100vw;
     position: relative;
+    background: $color-white;
+    padding-bottom: 5em;
 
     &Svg{
         width: 100%;
@@ -23,7 +25,6 @@
         top: 0;
         left: 0;
         z-index: 100;
-        // height:60%;
         width: 80% !important;
     }
 
