--- a/src/pages/landingPage/landingPage.module.scss
+++ b/src/pages/landingPage/landingPage.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables';
+
 .landingPage{
     height: 100vh;
     width: 100vw;
@@ -5,5 +7,6 @@
 }
 
 .body{
-    margin-top: 5rem;
+    padding: 0 2.5em;
+    background: $color-light-gray;
 }
