add footer page

--- a/src/pages/footer/footer.module.scss
+++ b/src/pages/footer/footer.module.scss
@@ -3,11 +3,47 @@
 .footer {
     background: $color-dark-blue;
     color: $color-grayish-blue;
-    width: 100%;
-    display: grid;
-    place-content: center;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2em 0;
 
     &Logo {
         color: $color-white;
+    }
+
+    &Social {
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        margin: 1.8rem 0;
+
+        & > *:not(:last-child) {
+            margin-right: 2rem;
+        }
+    }
+
+    nav {
+        text-align: center;
+        ul {
+            list-style: none;
+
+            li {
+                text-transform: capitalize;
+                background: linear-gradient(120deg, transparent 0%,transparent 50%, $color-lime-green 50%,); 
+                background-size: 250%;
+                padding: .6em .2em;
+                margin-bottom: 1rem;
+                transition: all 0.4s;
+                &:hover{
+                    background-size: 100%;   
+                }
+                a {
+                    text-decoration: none;
+                    color: $color-white;
+                }
+            }
+        }
     }
 }
